# Steam-Art-Manager

./: .editorconfig  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  Changelog.md  README.md  appimage-webkit.sh  bun.lockb  index.html  latest.json  linux-installer.sh  linux-installer_prototype.sh  package-lock.json  package.json  pnpm-lock.yaml  settings.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflow/: release.yml  test-build.yml
.github/workflows/: debug-release.yml  pipeline-test.yml  release.yml  test-build.yml
.github/workflows/create-release-assets/: action.yml
.github/workflows/custom-changelog/: action.yml
.husky/: pre-commit
build-resources/: appimage-installer.sh  appimage-uninstaller.sh  buildappimage-webkit.sh  flatpak-builder.yaml  flatpak.metainfo.xml  linux-installer.sh  linux-uinstaller.sh  linux-uninstaller.sh
crates/new-vdf-parser/: Cargo.toml  README.md
crates/new-vdf-parser/src/: appinfo_vdf_parser.rs  lib.rs  reader.rs  shortcuts_vdf_parser.rs  writer.rs
crates/vdf-parser/: Cargo.toml  README.md
crates/vdf-parser/src/: lib.rs  vdf_reader.rs
public/: theme.css
src/: App.svelte  Stores.ts
src-tauri/: Cargo.toml  settings.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: appinfo_vdf_parser.rs  clean_grids.rs  grids_cache_loader.rs  handle_changes.rs  logger.rs  main.rs  reader.rs  selected_cache.rs  shortcuts_vdf_parser.rs  start_menu_tiles.rs  steam.rs  vdf_reader.rs  vdf_structs.rs  writer.rs  zip_controller.rs
src-tauri/src/parsers/: appinfo_vdf_parser.rs  mod.rs  shortcuts_vdf_parser.rs
src-tauri/src/types/: mod.rs
src-tauri/src/utils/: logger.rs  mod.rs
src-tauri/wix/: short-license.txt
src-tauri/wix/locales/: en-US.wxl
src/components/: Footer.svelte  InputToast.svelte  Titlebar.svelte  index.ts
src/components/core/: Divider.svelte  GridImage.svelte  SectionTitle.svelte  imageDimensions.ts
src/components/directives/: scrollShadow.ts
src/components/effects/: MarqueeText.svelte
src/components/icons/: AllGrids.svelte  AllGridsIcon.svelte  Asterisk.svelte  Ban.svelte  Check.svelte  CheckOutlined.svelte  Clean.svelte  Close.svelte  CloseOutlined.svelte  Cog.svelte  Edit.svelte  Ellipse.svelte  Expand.svelte  Export.svelte  Film.svelte  Folder.svelte  GameTiles.svelte  GitHub.svelte  GridView.svelte  GridViewIcon.svelte  Hide.svelte  Image.svelte  Import.svelte  Info.svelte  LeftChevron.svelte  LeftDoubleChevron.svelte  ListView.svelte  ListViewIcon.svelte  More.svelte  Options.svelte  Plus.svelte  Position.svelte  Recycle.svelte  Refresh.svelte  RightChevron.svelte  RightDoubleChevron.svelte  SGDB.svelte  Share.svelte  Show.svelte  Stack.svelte  (+6 more)
src/components/info/: LoadingSpinner.svelte  ProgressBar.svelte
src/components/interactable/: Button.svelte  Checkbox.svelte  DropDown.svelte  FileButton.svelte  InputField.svelte  NumberInput.svelte  PathField.svelte  ReloadButton.svelte
src/components/interactables/: Button.svelte  Checkbox.svelte  DropDown.svelte  FileButton.svelte  IconButton.svelte  IconToggle.svelte  InputField.svelte  Menu.svelte  NumberInput.svelte  PathField.svelte  PathInput.svelte  RangeInput.svelte  ReloadButton.svelte  SearchBar.svelte  Slider.svelte  TextInput.svelte  Toggle.svelte  index.ts
src/components/layout/: Accordion.svelte  CurrentGridImage.svelte  Filters.svelte  Games.svelte  GridLoadingSkeleton.svelte  GridShinePlaceholder.svelte  Grids.svelte  InfiniteScroll.svelte  LoadingSpinner.svelte  PaddedScrollContainer.svelte  Paginator.svelte  Pane.svelte  ProgressBar.svelte  ProgressIndicator.svelte  Spacer.svelte  Table.svelte  VirtualGrid.svelte  VirtualList.svelte  index.ts
src/components/modals/: ConfirmModal.svelte  CurrentGridsModal.svelte  DialogModal.svelte  FaderModal.svelte  GameSearchModal.svelte  GridPreviewModal.svelte  LogoPositionModal.svelte  Modals.svelte  OriginalGridsModal.svelte  ProgressModal.svelte  SteamPathModal.svelte  ToolsModal.svelte  UpdateTilesModal.svelte
src/components/snackbars/: ErrorSnackbar.svelte  GenericSnackbar.svelte  InfoSnackbar.svelte
src/components/spacers/: HorizontalSpacer.svelte  VerticalSpacer.svelte
src/components/tabs/: Tab.svelte  Tabs.svelte
src/components/toast-modals/: CleanGridsModal.svelte  ConfirmToast.svelte  GridPreviewModal.svelte  LogoPositionModal.svelte  ModalBody.svelte  SetApiKeyToast.svelte
src/components/utils/: Spacer.svelte
src/lib/controllers/: AppController.ts  CacheController.ts  DialogController.ts  LogController.ts  RustInterop.ts  SettingsController.ts  SteamController.ts  SteamGridController.ts  TilesController.ts  ToastController.ts  ToasterController.ts  WindowController.ts  ZipController.ts  index.ts
src/lib/directives/: IsOverflowing.ts  ScrollShadow.ts  index.ts  scrollShadow.ts
src/lib/models/: Defaults.ts  Game.ts  LevelDBReader.ts  SGDB.ts  Vdf.ts  index.ts
src/lib/types/: SARM.ts  SGDB.ts  Settings.ts  Steam.ts  index.ts  vite-env.d.ts
src/lib/utils/: Defaults.ts  ImageConstants.ts  Reader.ts  SettingsManager.ts  SharedStore.ts  (+4 more)
src/stores/: AppState.ts  Modals.ts
src/types/: SteamTypes.d.ts  global.d.ts  vite-env.d.ts
src/windows/: globalStyles.css
(+90 files in other folders)
