[package]
name = "new-vdf-parser"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
authors = ["Travis Lane"]
description = "A parser for Steam's VDF file formats including appinfo.vdf and shortcuts.vdf"
license = "LGPL-2.1"
repository = "https://github.com/Tormak9970/Steam-Art-Manager"
homepage = "https://github.com/Tormak9970/Steam-Art-Manager"
readme = "README.md"
keywords = ["keyvalues", "vdf", "steam", "parser", "valve"]
categories = ["parser-implementations", "encoding"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10.0"
